--- a/README.Rmd
+++ b/README.Rmd
@@ -78,3 +78,12 @@ download <- get_highbond_results(highbond_openapi, highbond_org, highbond_datace
 
 head(upload)
 ```
+
+## Highbond Projects data
+
+Highbond Projects data (also known as 'Audits') is also retrievable, depending on which screen of information you would like to retrieve from. There are options to download all or just one set of information, depending on the pane chosen.
+
+```{r}
+projects <- get_project(highbond_openapi, highbond_org, highbond_datacenter)
+head(projects)
+```
