--- a/README.Rmd
+++ b/README.Rmd
@@ -76,8 +76,7 @@ Once that has successfully uploaded into Highbond Results, you can view the resu
 ```{r}
 download <- get_highbond_results(highbond_openapi, highbond_org, highbond_datacenter, highbond_table)
 
-head(upload)
-
+head(download$content$data)
 ```
 
 ## Highbond Projects data
