--- a/README.Rmd
+++ b/README.Rmd
@@ -48,6 +48,12 @@ To generate a Highbond API token from your Highbond instance by referencing the 
 
 To identify your organization number and data center, best found from your Launchpad, under Options / Organization. The organization number will be under the format of `https://accounts.highbond.com/orgs/<ORGANIZATION_ID>/details`
 
+To use any functions, you will need to create and pass a Highbond Authentication object. You can make it by passing the API token, organization / instance number and data center location to `setup_highbond()`:
+
+```{r}
+highbond_auth <- setup_highbond(highbond_openapi, highbond_org, highbond_datacenter)
+```
+
 ## Highbond Results data
 
 Once you have those, then you need to identify the table you want to upload and download data from. The easiest way to do this is to navigate to the Results Data Analytic table you want to upload and grab the `TABLE_ID` from the URL. It will look like:
@@ -66,7 +72,7 @@ upload <- data.frame(name = c('Cowbell', 'Rufus'),
                      date_ended = c(as.POSIXct(Sys.time()), as.POSIXct(Sys.time())))
 
 # Substitute your API key, org number, data, center, table, and the dataframe to be uploaded
-post_highbond_results(highbond_openapi, highbond_org, highbond_datacenter, highbond_table, upload = upload, purge = TRUE)
+post_highbond_results(highbond_auth, highbond_table, upload = upload, purge = TRUE)
 ```
 
 Once that has successfully uploaded into Highbond Results, you can view the results online and also download the new data too:
@@ -74,7 +80,7 @@ Once that has successfully uploaded into Highbond Results, you can view the resu
 ![successful results upload](man/figures/highbond_results_upload.png)
 
 ```{r}
-download <- get_highbond_results(highbond_openapi, highbond_org, highbond_datacenter, highbond_table)
+download <- get_highbond_results(highbond_auth, highbond_table)
 
 head(download$content$data)
 ```
@@ -84,6 +90,6 @@ head(download$content$data)
 Highbond Projects data (also known as 'Audits') is also retrievable, depending on which screen of information you would like to retrieve from. There are options to download all or just one set of information, depending on the pane chosen.
 
 ```{r}
-projects <- get_project(highbond_openapi, highbond_org, highbond_datacenter)
+projects <- get_project(highbond_auth, highbond_datacenter)
 head(projects)
 ```
