--- a/README.Rmd
+++ b/README.Rmd
@@ -71,7 +71,7 @@ upload <- data.frame(name = c('Cowbell', 'Rufus'),
                      date_ended = c(as.POSIXct(Sys.time()), as.POSIXct(Sys.time())))
 
 # Substitute your API key, org number, data, center, table, and the dataframe to be uploaded
-post_highbond_results(highbond_auth, highbond_table, upload = upload, purge = TRUE)
+post_results_records(highbond_auth, highbond_table, upload = upload, purge = TRUE)
 ```
 
 Once that has successfully uploaded into Highbond Results, you can view the results online and also download the new data too:
@@ -79,7 +79,7 @@ Once that has successfully uploaded into Highbond Results, you can view the resu
 ![successful results upload](man/figures/highbond_results_upload.png)
 
 ```{r}
-download <- get_highbond_results(highbond_auth, highbond_table)
+download <- get_results_records(highbond_auth, highbond_table)
 
 head(download$content$data)
 ```
